[metadata]
name = csadminlib
version = 0.0.2
author = Tanner Chase
author_email = 49108373+tannerchase5@users.noreply.github.com
description = A package containing functions that aid in server-side administative processes.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3 LICENSE
platform = OS Independent
url = https://github.com/tannerchase5/csadminlib
project_urls =
    Bug Tracker = https://github.com/tannerchase5/csadminlib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    google-api-python-client>=2.36.0
    google-auth-httplib2>=0.1.0
    google-auth-oauthlib>=0.4.6
    httplib2>=0.20.4
    safety>=1.10.3
[options.packages.find]
where = src
